[workspace]
resolver = "3"
members = [
    "example",
    "example-linux",
    "example-linux/ipc-serde",
    "example-linux/wasm-runner",
    "simple-alloc",
    "wasm-payload",
]

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
ipmpsc = "0.5.1"
env_logger = "0.11.9"
log = "0.4.22"
quote = "1.0.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_nanos = "0.1.4"
spin = { version = "0.10.0", default-features = false, features = [
    "spin_mutex",
] }
wasm-interpreter = { git = "https://github.com/dlr-ft/wasm-interpreter.git", tag = "v0.1.0" }
