[package]
name = "example-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
ipmpsc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

futures = "0.3.32"
hwloc = "0.5.0"
itertools = "0.14.0"
nix = { version = "0.31.2", features = ["fs"] }
procfs = "0.18.0"
tokio = { version = "1.50.0", features = [
    "macros",
    "process",
    "rt",
    "signal",
    "time",
] }
tokio-util = "0.7.18"
toml = "1.0.3"
walkdir = "2.5.0"

ipc-serde = { path = "./ipc-serde" }
wasm-runner = { path = "./wasm-runner" }
