[package]
name = "example"
version = "0.1.0"
edition = "2024"

[features]
default = ["qemu"]
qemu = []
kr260 = []
tebf0818 = []


[profile.release]
split-debuginfo = "off"
debug = false
strip = "debuginfo"

[dependencies]
arm64 = { git = "https://github.com/moritz-meier/arm64-rt.git", features = [
    "critical-section",
    "cortex-a53",
] }

embedded-alloc = { version = "0.6.0" }

wasm-interpreter = { git = "https://github.com/moritz-meier/wasm-interpreter.git", branch = "feat/fuel" }

embedded-hal-nb = "*"
sel4-pl011-driver = { git = "https://github.com/moritz-meier/rust-sel4.git", branch = "feat/zynqmp-support" }
sel4-zynqmp-xuartps-driver = { git = "https://github.com/moritz-meier/rust-sel4.git", branch = "feat/zynqmp-support" }

[build-dependencies]
quote = "1.0.40"
