#:schema foo

cargo-features = ["per-package-target"]

[package]
name = "example"
version = "0.1.0"
edition = "2024"

forced-target = "aarch64-unknown-none"

[features]
default = ["qemu"]
qemu = []
kr260 = []
tebf0818 = []

[profile.release]
debug = "full"
strip = "none"
split-debuginfo = "off"

[dependencies]
arm64 = { git = "https://github.com/moritz-meier/arm64-rt.git", features = [
    "cortex-a53",
] }

arm-gic = { version = "0.8.1", default-features = false, features = ["el2"] }

analyzer = { path = "../analyzer" }

simple-alloc = { path = "../simple-alloc" }
wasm-payload = { path = "../wasm-payload" }

log = { workspace = true }
spin = { workspace = true }

serde-json-core = { version = "0.6.0", default-features = false }

embedded-hal-nb = "1.0.0"
sel4-pl011-driver = { git = "https://github.com/moritz-meier/rust-sel4.git", branch = "feat/zynqmp-support" }
sel4-zynqmp-xuartps-driver = { git = "https://github.com/moritz-meier/rust-sel4.git", branch = "feat/zynqmp-support" }

# anyhow = { version = "1.0.102", default-features = false }
wasm-interpreter = { workspace = true }

[build-dependencies]
quote = { workspace = true }
