[package]
name = "wasm-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "*"
clap = { version = "4.5.47", features = ["derive"] }
ipmpsc = "*"
serde = { version = "*", features = ["derive"] }
serde_nanos = "*"

ipc-serde = { path = "../ipc-serde" }
wasm-interpreter = { git = "https://github.com/moritz-meier/wasm-interpreter.git", branch = "feat/fuel" }
