[package]
name = "wasm-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ipmpsc = { workspace = true }
serde = { workspace = true }


serde_nanos = "0.1.4"

ipc-serde = { path = "../ipc-serde" }
wasm-interpreter = { git = "https://github.com/dlr-ft/wasm-interpreter.git", tag = "v0.1.0" }
