[package]
name = "wasm-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ipmpsc = { workspace = true }
serde = { workspace = true }
serde_nanos = { workspace = true }
wasm-interpreter = { workspace = true }

ipc-serde = { path = "../ipc-serde" }
